--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Pass params into sql</title>
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
 		<style>
 			body{
 				width:100%
@@ -40,7 +40,7 @@
 			});
 			
 			$.ajax({
-		        url: 'http://sqlformat.org/api/v1/format',
+		        url: 'https://sqlformat.org/api/v1/format',
 		        type: 'POST',
 		        dataType: 'json',
 		        crossDomain: true,
